# Quarter3_Projects

./: Project03_LangChain_Function_Tool_Calling.ipynb  Project1_LangChain.ipynb  project2_Langchain_RAG.ipynb  readme.md
crewAi/: commands.txt
crewAi/project_01/: pyproject.toml
crewAi/project_01/src/project_01/: __init__.py  hello.py
